.k8s/mainfest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeshop-backend
  labels:
    app: kubeshop-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeshop-backend
  template:
    metadata:
      labels:
        app: kubeshop-backend
    spec:
      containers:
        - name: backend
          image: adhamelganzoury/kubeshop-backend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: kubeshop-backend
spec:
  selector:
    app: kubeshop-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeshop-frontend
  labels:
    app: kubeshop-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeshop-frontend
  template:
    metadata:
      labels:
        app: kubeshop-frontend
    spec:
      containers:
        - name: frontend
          image: adhamelganzoury/kubeshop-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: kubeshop-frontend
spec:
  selector:
    app: kubeshop-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # In Minikube you can use NodePort (or use `minikube service frontend`) to expose your frontend
      nodePort: 31773
  type: NodePort
