.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeshop-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Optional: Force HTTPS
spec:
  # tls:
  #   - hosts:
  #       - kubeshop.local
  #     secretName: kubeshop-tls-secret
  rules:
    - host: kubeshop.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
